--- a/src/main/webapp/HTML/home.html
+++ b/src/main/webapp/HTML/home.html
@@ -1,12 +1,12 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8"%>
-
+<!-- <%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%> -->
 <!DOCTYPE html>
 <html lang="pt-BR">
     <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bem-vindo!</title>
+    <link rel="stylesheet" href="resources/css/home.css">
     </head>
     <body>
         <header>
