Atualização em todas as telas já criadas

--- a/src/main/webapp/HTML/home.html
+++ b/src/main/webapp/HTML/home.html
@@ -5,17 +5,32 @@
     <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bem-vindo!</title>
+
+    <!-- Reset CSS -->
+    <link rel="stylesheet" href="resources/css/reset.css">
+
+
+    <!-- BOOTSTRAP -->
+	<link rel="stylesheet" href="resources/css/bootstrap-grid.css">
+	<link rel="stylesheet" href="resources/css/bootstrap.css">
+
+    <!-- Home -->
     <link rel="stylesheet" href="resources/css/home.css">
+
+    <title>Bem-vindo!</title>
     </head>
     <body>
         <header>
 			<img src="imagens/logo.svg" alt="logo" class="logo">
 		</header>
-        <div class="texto">
+        <section class="cabecalho">
             <h1>FINTECH</h1>
             <h2>Organização e investimento</h2>
             <h3>Bem-vindo!</h3>
-        </div>
+        </section>
+        <section>
+            <button class="form-control" id="entrar">Entrar</button>
+            <button class="form-control" id="novo_usuario">Novo Usuário</button>
+        </section>
     </body>
 </html>
