--- a/src/main/webapp/HTML/cadastro-movimentacao.html
+++ b/src/main/webapp/HTML/cadastro-movimentacao.html
@@ -19,7 +19,7 @@
 		<!-- CSS Personalizado -->
 		<link rel="stylesheet" href="resources/css/cadastro-movimentacao.css">
 
-	    <title>Cadastro de Movimentações</title>
+	    <title>Movimentações</title>
 		<!-- <%@ include file="header.jsp" %> -->
 	</head>
 	<body>
@@ -32,8 +32,9 @@
 		</header>
 		<main>
 			<!-- <%@ include file="menu.jsp" %> -->
-			<div class="container">
-				<h2>Cadastro de Movimentações</h2>
+			<div class="container box">
+				<h2>Movimentações</h2>
+
 				<!-- <c:if test="${not empty msg }">
 					<div class="alert alert-success">${msg}</div>
 				</c:if> -->
@@ -43,7 +44,7 @@
 				
 					<div>
 						<label for="id-categoria">Categoria</label>
-						<select class="form-select" id="id-categoria" name="categoria">
+						<select class="form-select categoria" id="id-categoria" name="categoria">
 							<option>Receita</option>
 							<option>Despesa</option>
 						</select>
@@ -52,7 +53,7 @@
 					<!-- <%-- SELECAO DE CATEGORIA POR STRING - NAO USAR, MAS MANTER -->
 					<div class="form-group">
 						<label for="id-categoria">Categoria</label>
-						<input type="text" name="categoria" id="id-categoria" class="form-control" placeholder="Digite a categoria" required>
+						<input type="text" name="categoria" id="id-categoria" class="form-control nome" placeholder="Digite a categoria" required>
 					</div> 
 					<!-- --%> -->
 				
